--- a/src/Artisan/views/artisan/artisan.twig
+++ b/src/Artisan/views/artisan/artisan.twig
@@ -1,25 +1,1 @@
-<!doctype html>
-<html lang=en>
-<head>
-    <meta charset=utf-8>
-    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel=icon href="">
-    <title>Artisan</title>
-    <link href="http://localhost/slimapp/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://localhost/slimapp/css/dashboard.css" rel="stylesheet">
-    <link href="static/css/app.51004bcc3bcd303bec652e55d22b7be8.css" rel="stylesheet">
-</head>
-<body>
-    <div id="main"></div>
-    {{ crsf_field() | raw }}
-    <script type="text/javascript" src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
-    <script type="text/javascript" src="static/js/manifest.2ae2e69a05c33dfc65f8.js"></script>
-    <script type="text/javascript" src="static/js/vendor.20feefa5e6dc7d59f271.js"></script>
-    <script type="text/javascript" src="static/js/app.90a931c31bd7029d5703.js"></script>
-    <script>
-        feather.replace();
-    </script>
-</body>
-</html>
+<!doctype html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name=description content=""><meta name=author content=""><link rel=icon href=""><title>Artisan</title><link href=http://localhost/slimapp/css/bootstrap.min.css rel=stylesheet><link href=http://localhost/slimapp/css/dashboard.css rel=stylesheet><link href=static/css/app.9fd84bed847e7916d6b1bf32b4916a53.css rel=stylesheet></head><body><div id=main></div>{{ crsf_field() | raw }} <input type=hidden name=csrf_name id=csrf_name class=form-control value=csrf5c2dfabf96288> <input type=hidden name=csrf_value id=csrf_value class=form-control value=c43f3efaa56a85dcf5dd7428ce145f60><script src=https://unpkg.com/feather-icons/dist/feather.min.js></script><script type=text/javascript src=static/js/manifest.37a2ecbb1d1b7e6c9ada.js></script><script type=text/javascript src=static/js/vendor.62b7bbbb17475f2a51d4.js></script><script type=text/javascript src=static/js/app.995e45208350a06f3705.js></script></body></html>
