fix migrate commands vue.js

--- a/src/Artisan/views/artisan/index.twig
+++ b/src/Artisan/views/artisan/index.twig
@@ -14,6 +14,8 @@
 
     <!-- Custom styles for this template -->
     <link href="http://localhost/slimapp/css/dashboard.css" rel="stylesheet">
+
+    <link href="static/css/app.eaba24239374b186a074c94a72ff7cfd.css" rel="stylesheet">
   </head>
 
   <body>
@@ -21,7 +23,7 @@
       {{ crsf_field() | raw }}
     <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
 	<script type="text/javascript" src="static/js/manifest.37a2ecbb1d1b7e6c9ada.js"></script>
-	<script type="text/javascript" src="static/js/vendor.62b7bbbb17475f2a51d4.js"></script>
-	<script type="text/javascript" src="static/js/app.7b6ab9e5a0298e9d4d9a.js"></script>
+	<script type="text/javascript" src="static/js/vendor.2092b73a3bdc3bea4028.js"></script>
+	<script type="text/javascript" src="static/js/app.0979094bae9682e723e5.js"></script>
   </body>
 </html>
