--- a/src/Artisan/views/artisan/index.twig
+++ b/src/Artisan/views/artisan/index.twig
@@ -10,10 +10,10 @@
     <title>Artisan</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="http://localhost/slimapp/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="http://localhost/slimapp/css/dashboard.css" rel="stylesheet">
+    <link href="css/dashboard.css" rel="stylesheet">
 
     <link href="static/css/app.5c594ceb0203b3396c79b8fc2e6fe7c8.css" rel="stylesheet">
   </head>
